--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install markdownlint (mdl)
+        run: sudo gem install mdl
       - name: Validate Markdown format
         run: |
           ./scripts/validate_markdown.sh
