--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install markdownlint (mdl)
+        run: sudo gem install mdl
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Validate Markdown
