--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -20,12 +20,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install markdownlint (mdl)
-        run: sudo gem install mdl
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Validate Markdown
-        run: ./scripts/validate_markdown.sh
+      - name: Validate JSON
+        run: ./scripts/validate_json.sh
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
