--- a/.github/workflows/generate-overviews.yml
+++ b/.github/workflows/generate-overviews.yml
@@ -27,10 +27,10 @@ jobs:
         run: python3 scripts/generate_overviews.py
       - name: Update docs index
         run: python3 scripts/update_docs_index.py
-      - name: Install markdownlint (mdl)
-        run: sudo gem install mdl
-      - name: Validate Markdown
-        run: ./scripts/validate_markdown.sh
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Validate JSON
+        run: ./scripts/validate_json.sh
       - name: Check for changes
         id: diff
         run: |
