--- a/.github/workflows/repo-checks.yml
+++ b/.github/workflows/repo-checks.yml
@@ -3,12 +3,12 @@ name: Repository Checks
 on:
   push:
     paths:
-      - '**/*.md'
+      - '**/*.json'
       - '.github/workflows/repo-checks.yml'
       - 'scripts/check_prompts.py'
   pull_request:
     paths:
-      - '**/*.md'
+      - '**/*.json'
       - '.github/workflows/repo-checks.yml'
       - 'scripts/check_prompts.py'
 
