--- a/.github/workflows/fix-markdown-issues.yml
+++ b/.github/workflows/fix-markdown-issues.yml
@@ -4,14 +4,12 @@ name: Fix Markdown Issues
 on:
   push:
     paths:
-      - '**/*.md'
-      - 'todo_fix.md'
+      - '**/*.json'
       - '.github/workflows/fix-markdown-issues.yml'
       - 'scripts/fix_markdown_issues.py'
   pull_request:
     paths:
-      - '**/*.md'
-      - 'todo_fix.md'
+      - '**/*.json'
       - '.github/workflows/fix-markdown-issues.yml'
       - 'scripts/fix_markdown_issues.py'
 
