--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -6,7 +6,6 @@ on:
     branches: ["main"]
   pull_request:
     paths:
-      - '**/*.md'
       - '**/*.json'
 
 jobs:
@@ -22,6 +21,10 @@ jobs:
           python-version: '3.x'
       - name: Update documentation index
         run: python3 scripts/update_docs_index.py
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Validate JSON
+        run: ./scripts/validate_json.sh
       - name: Check for changes
         id: diff
         run: |
