Update docs index script to use JSON metadata

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -4,6 +4,8 @@ name: Update Docs Index
 on:
   push:
     branches: ["main"]
+    paths:
+      - '**/*.json'
   pull_request:
     paths:
       - '**/*.json'
