--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -5,9 +5,13 @@ on:
   push:
     branches: ["main"]
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
   pull_request:
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
 
 jobs:
@@ -25,7 +29,7 @@ jobs:
         run: python3 scripts/update_docs_index.py
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
-      - name: Validate JSON
+      - name: Validate prompts
         run: ./scripts/validate_json.sh
       - name: Check for changes
         id: diff
@@ -43,4 +47,3 @@ jobs:
           git add docs/index.md docs/table-of-contents.md
           git commit -m "Update docs index"
           git push
-
