--- a/.github/workflows/fix-markdown-issues.yml
+++ b/.github/workflows/fix-markdown-issues.yml
@@ -4,11 +4,15 @@ name: Fix Markdown Issues
 on:
   push:
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
       - '.github/workflows/fix-markdown-issues.yml'
       - 'scripts/fix_markdown_issues.py'
   pull_request:
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
       - '.github/workflows/fix-markdown-issues.yml'
       - 'scripts/fix_markdown_issues.py'
@@ -30,7 +34,7 @@ jobs:
         run: python3 scripts/fix_markdown_issues.py
       - name: Update docs index
         run: python3 scripts/update_docs_index.py
-      - name: Validate JSON
+      - name: Validate prompts
         run: ./scripts/validate_json.sh
       - name: Check for changes
         id: diff
