--- a/.github/workflows/generate-overviews.yml
+++ b/.github/workflows/generate-overviews.yml
@@ -4,11 +4,15 @@ name: Generate Overviews
 on:
   push:
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
       - '.github/workflows/generate-overviews.yml'
       - 'scripts/generate_overviews.py'
   pull_request:
     paths:
+      - '**/*.prompt.yaml'
+      - '**/*.prompt.yml'
       - '**/*.json'
       - '.github/workflows/generate-overviews.yml'
       - 'scripts/generate_overviews.py'
@@ -30,7 +34,7 @@ jobs:
         run: python3 scripts/update_docs_index.py
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
-      - name: Validate JSON
+      - name: Validate prompts
         run: ./scripts/validate_json.sh
       - name: Check for changes
         id: diff
