--- a/protocol_prompts/03_protocol_reviewer_gap_analysis_coach.prompt.yaml
+++ b/protocol_prompts/03_protocol_reviewer_gap_analysis_coach.prompt.yaml
@@ -27,8 +27,8 @@ messages:
       1. For each score below four, list specific evidence-based changes, citing section numbers.
       1. Summarize the top three actionable improvements in a brief paragraph.
 
-        Inputs:
-        - `{{protocol_text_or_nct}}` – full protocol text or clinicaltrials.gov identifier
+      Inputs:
+      - `{{protocol_text_or_nct}}`
 
       Output format:
       - Table of scores with one-line rationales.
