--- a/design_prompts/02_email_assistant_go_no_go_vote.prompt.yaml
+++ b/design_prompts/02_email_assistant_go_no_go_vote.prompt.yaml
@@ -1,7 +1,6 @@
 ---
 name: AI Email Assistant Go/No-Go Vote
-description: |
-  Personas: UX designer, data scientist, CFO. Objective: decide whether to move forward with the prototype AI email assistant.
+description: Personas: UX designer, data scientist, CFO. Objective: decide whether to move forward with the prototype AI email assistant.
 model: gpt-4o
 modelParameters:
   temperature: 0.2
