Fill CFO prompt details

--- a/cfo_prompts/02_competitive_bid_pricing.prompt.yaml
+++ b/cfo_prompts/02_competitive_bid_pricing.prompt.yaml
@@ -1,7 +1,7 @@
 # yamllint disable rule:line-length
 ---
 name: Competitive-Bid Pricing & Margin Optimizer
-description: ''
+description: Compare competitor bids and internal costs to recommend a winning price with target margin.
 model: gpt-4
 modelParameters:
   temperature: 0.2
@@ -10,8 +10,24 @@ messages:
     content: |-
       Act as my strategic pricing manager. We are bidding on a multi-year oncology study against two top-10 CROs.
   - role: user
-    content: |
+    content: |-
+      - `{{competitor_bids}}` – list of competitor prices (USD).
+      - `{{internal_cost}}` – our estimated delivery cost (USD).
+      - `{{target_margin}}` – desired profit margin percentage.
+      - `{{volume_adjustments}}` – optional volume or scope notes.
+
+      Start the response with **Bid Analysis -**.
+      Output format:
+      1. Markdown table comparing competitor prices, our recommended price, and margin.
+      2. Three bullet-point justification notes on win strategy.
 testData:
-  - input: ''
-    expected: |-
-      Completion follows instructions.
+  - input: |-
+      competitor_bids: [1000000, 1100000]
+      internal_cost: 850000
+      target_margin: 0.2
+      volume_adjustments: none
+    expected: Bid Analysis -
+evaluators:
+  - name: Output starts with 'Bid Analysis -'
+    string:
+      startsWith: 'Bid Analysis -'
