--- a/cfo_prompts/01_scenario_cash_flow_forecast.prompt.yaml
+++ b/cfo_prompts/01_scenario_cash_flow_forecast.prompt.yaml
@@ -1,7 +1,7 @@
 # yamllint disable rule:line-length
 ---
 name: Scenario-Based Clinical-Trial Cash-Flow Forecast
-description: ''
+description: Model 12-quarter cash flows under baseline, inflation, and recruitment slowdown scenarios.
 model: gpt-4
 modelParameters:
   temperature: 0.2
@@ -10,8 +10,24 @@ messages:
     content: |-
       You are my senior FP&A analyst inside a mid-size global CRO. Rising Phase II/III costs and client delays are compressing margins. I need a 12-quarter cash-flow forecast under three scenarios (Base, +15% cost inflation, –20% patient-recruitment pace).
   - role: user
-    content: |
+    content: |-
+      - `{{base_revenue}}` – baseline quarterly revenue (USD).
+      - `{{base_costs}}` – baseline quarterly costs (USD).
+      - `{{starting_cash}}` – cash on hand at start (USD).
+      - `{{notes}}` – assumptions or upcoming events.
+
+      Start the response with **Scenario Forecast -**.
+      Output format:
+      1. Markdown table showing Base, Inflation, and Slow-Recruitment scenarios for 12 quarters with net and ending cash.
+      2. Two bullet-point insights on liquidity risks or funding needs.
 testData:
-  - input: ''
-    expected: |-
-      Completion follows instructions.
+  - input: |-
+      base_revenue: 20000000
+      base_costs: 15000000
+      starting_cash: 50000000
+      notes: none
+    expected: Scenario Forecast -
+evaluators:
+  - name: Output starts with 'Scenario Forecast -'
+    string:
+      startsWith: 'Scenario Forecast -'
