--- a/cfo_prompts/03_regulatory_risk_dashboard.prompt.yaml
+++ b/cfo_prompts/03_regulatory_risk_dashboard.prompt.yaml
@@ -1,7 +1,7 @@
 # yamllint disable rule:line-length
 ---
 name: Regulatory-Risk & ESG Impact Dashboard Builder
-description: ''
+description: Aggregate regulatory changes and ESG metrics into a compliance risk dashboard.
 model: gpt-4
 modelParameters:
   temperature: 0.2
@@ -10,8 +10,25 @@ messages:
     content: |-
       You are my compliance-analytics officer. New EU CTR requirements and U.S. FDA diversity-reporting rules may raise study costs and ESG disclosure obligations.
   - role: user
-    content: |
+    content: |-
+      - `{{study_portfolio}}` – list of active or planned studies.
+      - `{{reg_updates}}` – relevant regulatory changes.
+      - `{{esg_baseline}}` – current ESG performance metrics.
+      - `{{risk_tolerance}}` – high-level risk appetite or thresholds.
+
+      Start the response with **Risk Dashboard -**.
+      Output format:
+      1. Markdown table summarizing risk area, impact, and mitigation.
+      2. Bullet summary of ESG implications and recommended actions.
 testData:
-  - input: ''
-    expected: |-
-      Completion follows instructions.
+  - input: |-
+      study_portfolio: [Phase II oncology, Phase III cardiology]
+      reg_updates: [EU CTR 2024, FDA diversity guidance 2022]
+      esg_baseline:
+        current_score: 65
+      risk_tolerance: moderate
+    expected: Risk Dashboard -
+evaluators:
+  - name: Output starts with 'Risk Dashboard -'
+    string:
+      startsWith: 'Risk Dashboard -'
