--- a/data_management_prompts/01_unified_data_cleansing.prompt.yaml
+++ b/data_management_prompts/01_unified_data_cleansing.prompt.yaml
@@ -8,6 +8,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a clinical data manager outlining unified data cleansing strategies
+      for trial datasets.
   - role: user
     content: |-
       {{input}}
