--- a/data_management_prompts/08_decentralized_trial_risk_matrix.prompt.yaml
+++ b/data_management_prompts/08_decentralized_trial_risk_matrix.prompt.yaml
@@ -7,6 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a risk analyst constructing risk matrices for decentralized
+      clinical trials.
   - role: user
     content: |-
       {{input}}
