--- a/data_management_prompts/02_regulatory_gap_analysis.prompt.yaml
+++ b/data_management_prompts/02_regulatory_gap_analysis.prompt.yaml
@@ -7,6 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a compliance analyst identifying regulatory gaps in clinical data
+      management processes.
   - role: user
     content: |-
       {{input}}
