--- a/data_management_prompts/04_clinical_etl_mapping_spec.prompt.yaml
+++ b/data_management_prompts/04_clinical_etl_mapping_spec.prompt.yaml
@@ -7,6 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are an ETL specialist defining mapping specifications for clinical data
+      pipelines.
   - role: user
     content: |-
       {{input}}
