--- a/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
+++ b/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
@@ -7,6 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a reviewer evaluating clinical ETL pipelines for accuracy and
+      efficiency.
   - role: user
     content: |-
       {{input}}
