--- a/data_management_prompts/07_phase_ii_oncology_dmp.prompt.yaml
+++ b/data_management_prompts/07_phase_ii_oncology_dmp.prompt.yaml
@@ -7,6 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a data manager developing a Phase II oncology data management plan.
   - role: user
     content: |-
       {{input}}
