--- a/data_management_prompts/09_sop_gap_analysis.prompt.yaml
+++ b/data_management_prompts/09_sop_gap_analysis.prompt.yaml
@@ -7,6 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a process auditor evaluating gaps in data management SOPs.
   - role: user
     content: |-
       {{input}}
