--- a/executive_prompts/15_hosting_cost_reduction_tot.prompt.yaml
+++ b/executive_prompts/15_hosting_cost_reduction_tot.prompt.yaml
@@ -7,6 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
+      You are a cost-optimization strategist using tree-of-thought reasoning to
+      reduce hosting expenses.
   - role: user
     content: |-
       {{input}}
