Add placeholder evaluators to prompts with test data

--- a/adjudication_prompts/01_real_time_adjudication_dashboard.prompt.yaml
+++ b/adjudication_prompts/01_real_time_adjudication_dashboard.prompt.yaml
@@ -37,3 +37,4 @@ testData:
       - **Section 2:** Dashboard data model (table)
       - **Section 3:** Alert rules (bullets)
       - **Section 4:** Platform recommendations (table)
+evaluators: []
