--- a/agentic_coding/02_project_brief_epic.prompt.yaml
+++ b/agentic_coding/02_project_brief_epic.prompt.yaml
@@ -36,3 +36,4 @@ testData:
       project_description: example_project_description
     expected: |-
       Markdown sections titled **Project Description**, **Key Features**, **Technical Entities & Data Models**, **Business Rules & Logic**, **Success Metrics**, and **Additional Implementation Details**.
+evaluators: []
