--- a/agentic_coding/03_technical_implementation_plan.prompt.yaml
+++ b/agentic_coding/03_technical_implementation_plan.prompt.yaml
@@ -34,3 +34,4 @@ testData:
       technology_choices: example_technology_choices
     expected: |-
       Markdown sections for Architecture Breakdown, Libraries and Tools, Data Models & Specifications, Business Logic & Rules, Dependencies & Risk Analysis, and Implementation Steps.
+evaluators: []
