--- a/agentic_coding/06_project_memory.prompt.yaml
+++ b/agentic_coding/06_project_memory.prompt.yaml
@@ -25,3 +25,4 @@ testData:
   - vars: {}
     expected: |-
       Markdown file with sections **Current Project State** and **Contextual Notes**.
+evaluators: []
