--- a/agentic_coding/06_todo_generation.prompt.yaml
+++ b/agentic_coding/06_todo_generation.prompt.yaml
@@ -24,3 +24,4 @@ testData:
   - vars: {}
     expected: |-
       Markdown checklist under **To-Do** and **Completed Tasks** sections.
+evaluators: []
