--- a/agentic_coding/07_e2e_test_discovery.prompt.yaml
+++ b/agentic_coding/07_e2e_test_discovery.prompt.yaml
@@ -54,3 +54,4 @@ testData:
       1. Environment & Tooling
       1. Proposed E2E Test Suite
       1. Coverage Gaps & Risk Register
+evaluators: []
