--- a/agentic_coding/07_requirements_prompt.prompt.yaml
+++ b/agentic_coding/07_requirements_prompt.prompt.yaml
@@ -36,3 +36,4 @@ testData:
       repository_url: example_repository_url
     expected: |-
       Return the finished `REQUIREMENTS.md` content only.
+evaluators: []
