--- a/biosafety_prompts/03_regulatory_submission_support.prompt.yaml
+++ b/biosafety_prompts/03_regulatory_submission_support.prompt.yaml
@@ -29,3 +29,4 @@ testData:
       device_description: example_device_description
     expected: |-
       Bullet points and tables suitable for submission documentation.
+evaluators: []
