--- a/bioskills_prompts/01_hands_on_procedure_coaching.prompt.yaml
+++ b/bioskills_prompts/01_hands_on_procedure_coaching.prompt.yaml
@@ -29,3 +29,4 @@ testData:
       procedure_name: example_procedure_name
     expected: |-
       Bullet list of steps and checkpoints.
+evaluators: []
