--- a/bioskills_prompts/02_simulated_clinical_scenario_feedback.prompt.yaml
+++ b/bioskills_prompts/02_simulated_clinical_scenario_feedback.prompt.yaml
@@ -28,3 +28,4 @@ testData:
       procedure_notes: example_procedure_notes
     expected: |-
       Bullet points followed by a short reflective question.
+evaluators: []
