--- a/biostatistics_prompts/04_universal_template_table_prompt.prompt.yaml
+++ b/biostatistics_prompts/04_universal_template_table_prompt.prompt.yaml
@@ -34,3 +34,4 @@ testData:
       dataset_path: example_dataset_path
     expected: |-
       Code block followed by the generated table.
+evaluators: []
