--- a/biostatistics_prompts/06_qc_listing_cross_check_prompt.prompt.yaml
+++ b/biostatistics_prompts/06_qc_listing_cross_check_prompt.prompt.yaml
@@ -31,3 +31,4 @@ testData:
       dataset_paths: example_dataset_paths
     expected: |-
       Three code blocks followed by a diff table or pass message.
+evaluators: []
