--- a/biostatistics_prompts/07_study_design_statistical_approach.prompt.yaml
+++ b/biostatistics_prompts/07_study_design_statistical_approach.prompt.yaml
@@ -35,3 +35,4 @@ testData:
       regulatory_target: example_regulatory_target
     expected: |-
       Bullet summary followed by short explanatory paragraphs.
+evaluators: []
