--- a/biostatistics_prompts/09_adaptive_design_interim_monitoring.prompt.yaml
+++ b/biostatistics_prompts/09_adaptive_design_interim_monitoring.prompt.yaml
@@ -30,3 +30,4 @@ testData:
       trial_details: example_trial_details
     expected: |-
       Bulleted recommendations followed by brief explanatory notes.
+evaluators: []
