--- a/biostatistics_prompts/11_fda_missing_data_query_response.prompt.yaml
+++ b/biostatistics_prompts/11_fda_missing_data_query_response.prompt.yaml
@@ -35,3 +35,4 @@ testData:
       sap_references: example_sap_references
     expected: |-
       Word-style Markdown outline with H1/H2 sections plus the appendix table.
+evaluators: []
