--- a/business_development_prompts/01_market_intelligence_radar.prompt.yaml
+++ b/business_development_prompts/01_market_intelligence_radar.prompt.yaml
@@ -33,3 +33,4 @@ testData:
       company_size: example_company_size
     expected: |-
       Markdown table followed by a short summary paragraph.
+evaluators: []
