--- a/business_development_prompts/03_90_day_pipeline_health_review.prompt.yaml
+++ b/business_development_prompts/03_90_day_pipeline_health_review.prompt.yaml
@@ -30,3 +30,4 @@ testData:
       crm_csv: example_crm_csv
     expected: |-
       Markdown summary tables followed by bullet-point recommendations.
+evaluators: []
