--- a/bioskills_prompts/03_objective_skills_assessment.prompt.yaml
+++ b/bioskills_prompts/03_objective_skills_assessment.prompt.yaml
@@ -34,3 +34,4 @@ testData:
 
       | Criterion | Description | Pass threshold |
       |-----------|-------------|----------------|
+evaluators: []
