--- a/biostatistics_prompts/10_sample_size_randomization_strategy.prompt.yaml
+++ b/biostatistics_prompts/10_sample_size_randomization_strategy.prompt.yaml
@@ -35,3 +35,4 @@ testData:
       dropout_rate: example_dropout_rate
     expected: |-
       Executive summary (≤150 words) followed by two tables: sample-size scenarios and randomization parameters. Conclude with a fenced R code block.
+evaluators: []
