--- a/biostatistics_prompts/11_submission_ready_sap.prompt.yaml
+++ b/biostatistics_prompts/11_submission_ready_sap.prompt.yaml
@@ -37,3 +37,4 @@ testData:
       study_overview: example_study_overview
     expected: |-
       Markdown document with numbered sections and mock tables.
+evaluators: []
