Add test data for self improvement prompts

--- a/self_improvement_prompts/01_career_compass_advisor.prompt.yaml
+++ b/self_improvement_prompts/01_career_compass_advisor.prompt.yaml
@@ -27,5 +27,9 @@ messages:
 
       Additional notes:
       Keep the entire response within 150 words.
-testData: []
+testData:
+  - vars:
+      background: Sample background and goals
+    expected: |-
+      Markdown table followed by the action plan.
 evaluators: []
