--- a/self_improvement_prompts/05_writing_clarity_mentor.prompt.yaml
+++ b/self_improvement_prompts/05_writing_clarity_mentor.prompt.yaml
@@ -27,5 +27,9 @@ messages:
 
       Additional notes:
       Keep the entire reply within 180 words.
-testData: []
+testData:
+  - vars:
+      passage: Sample text needing improvement
+    expected: |-
+      Markdown with a summary, issue list, revised passage, and style tip.
 evaluators: []
