--- a/epro_prompts/02_optimize_epro_form_design.prompt.yaml
+++ b/epro_prompts/02_optimize_epro_form_design.prompt.yaml
@@ -19,5 +19,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |
+      Need to improve ePRO form for fatigue tracking.
+    expected: Design groups items across screens with validation and onboarding tips.
+evaluators:
+  - name: Mentions validation
+    string:
+      contains: "validation"
