--- a/cra_prompts/03_rbm_plan_builder.prompt.yaml
+++ b/cra_prompts/03_rbm_plan_builder.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Risk-Based Monitoring (RBM) Plan Builder
-description: Develop a site-level risk-based monitoring plan with risk matrix, 
+description: Develop a site-level risk-based monitoring plan with risk matrix,
   KRIs, and adaptive strategy.
 model: gpt-4
 modelParameters:
@@ -30,5 +30,14 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      Study phase/indication: Phase II, metastatic NSCLC
+      Enrollment goal: 150 participants, 10 sites
+      Known risk factors: high AE rate, complex biomarker sampling, decentralized ePRO
+      Regulatory expectation: ICH E6 (R3) & FDA guidance on risk-based monitoring (2019)
+    expected: 1. **Risk Assessment Matrix**
+evaluators:
+  - name: Output starts with Risk Assessment Matrix section
+    string:
+      startsWith: '1. **Risk Assessment Matrix**'
