--- a/data_management_prompts/02_regulatory_gap_analysis.prompt.yaml
+++ b/data_management_prompts/02_regulatory_gap_analysis.prompt.yaml
@@ -7,8 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a compliance analyst identifying regulatory gaps in clinical data
-      management processes.
+      You are a compliance analyst evaluating clinical data management processes
+      for regulatory gaps.
   - role: user
     content: |-
       {{input}}
