--- a/data_management_prompts/05_clinical_etl_transformation_qc.prompt.yaml
+++ b/data_management_prompts/05_clinical_etl_transformation_qc.prompt.yaml
@@ -7,7 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a quality engineer specifying validation checks for clinical ETL
+      You are a quality engineer establishing validation checks for clinical ETL
       transformations.
   - role: user
     content: |-
