--- a/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
+++ b/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
@@ -7,7 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a reviewer evaluating clinical ETL pipelines for accuracy and
+      You are a reviewer auditing clinical ETL pipelines for accuracy and
       efficiency.
   - role: user
     content: |-
