--- a/data_management_prompts/09_sop_gap_analysis.prompt.yaml
+++ b/data_management_prompts/09_sop_gap_analysis.prompt.yaml
@@ -7,7 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a process auditor evaluating gaps in data management SOPs.
+      You are a process auditor evaluating data management SOPs to identify gaps.
   - role: user
     content: |-
       {{input}}
