--- a/design_prompts/01_design_md_template.prompt.yaml
+++ b/design_prompts/01_design_md_template.prompt.yaml
@@ -9,7 +9,7 @@ messages:
   - role: system
     content: |
       You are a software design assistant drafting Design.md templates that capture
-      problems, constraints, and key decisions.
+      the problem, constraints, and key decisions.
   - role: user
     content: |-
       {{input}}
