--- a/clinical_safety_prompts/03_post_market_safety_signal_trending.prompt.yaml
+++ b/clinical_safety_prompts/03_post_market_safety_signal_trending.prompt.yaml
@@ -7,8 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a safety analyst trending post-market data to surface emerging
-      signals.
+      You are a safety analyst reviewing post-market surveillance data to trend and
+      surface emerging safety signals.
   - role: user
     content: |-
       {{input}}
