--- a/data_management_prompts/03_data_architecture_blueprint.prompt.yaml
+++ b/data_management_prompts/03_data_architecture_blueprint.prompt.yaml
@@ -7,7 +7,7 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a data architect drafting blueprints for clinical data architectures.
+      You are a data architect planning scalable clinical data architectures.
   - role: user
     content: |-
       {{input}}
