--- a/data_management_prompts/07_phase_ii_oncology_dmp.prompt.yaml
+++ b/data_management_prompts/07_phase_ii_oncology_dmp.prompt.yaml
@@ -7,7 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a data manager developing a Phase II oncology data management plan.
+      You are a data manager developing a comprehensive data management plan for a
+      Phase II oncology trial.
   - role: user
     content: |-
       {{input}}
