--- a/data_management_prompts/08_decentralized_trial_risk_matrix.prompt.yaml
+++ b/data_management_prompts/08_decentralized_trial_risk_matrix.prompt.yaml
@@ -7,8 +7,8 @@ modelParameters:
 messages:
   - role: system
     content: |
-      You are a risk analyst constructing risk matrices for decentralized
-      clinical trials.
+      You are a risk analyst evaluating decentralized clinical trials through
+      structured risk matrices.
   - role: user
     content: |-
       {{input}}
