ci: enable pip caching in repo-checks workflow
- Create `requirements.txt` with pyyaml, yamllint, and pydantic.
- Update `.github/workflows/repo-checks.yml` to cache pip dependencies and install from `requirements.txt`.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/repo-checks.yml
+++ b/.github/workflows/repo-checks.yml
@@ -27,7 +27,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+          cache: 'pip'
       - name: Install dependencies
-        run: pip install pyyaml yamllint
+        run: pip install -r requirements.txt
       - name: Run repository checks
         run: python3 tools/scripts/test_all.py
