Refactor validate_prompt_schema.py to use Pydantic
Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/repo-checks.yml
+++ b/.github/workflows/repo-checks.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install pyyaml yamllint
+        run: pip install pyyaml yamllint pydantic
       - name: Run repository checks
         run: python3 tools/scripts/test_all.py
