Hardened Clinical Monitoring Dashboard prompt with Mason's improvements.
- Added explicit persona "Clinical Monitoring Manager" to system message.
- Wrapped user input in `<site_data>` XML tags to prevent injection.
- Enforced Markdown table structure and Executive Summary in output instructions.
- Added strict evaluator for table headers.
- Verified schema and prompt guidelines with `test_all.py`.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/clinical/monitoring/01_risk_based_site_performance_dashboard.prompt.yaml
+++ b/prompts/clinical/monitoring/01_risk_based_site_performance_dashboard.prompt.yaml
@@ -8,6 +8,12 @@ modelParameters:
 messages:
   - role: system
     content: |-
+      You are an experienced **Clinical Monitoring Manager** at a global CRO overseeing several Phase II oncology trials.
+
+      Your task is to analyze site performance data and generate a risk-based dashboard.
+
+      Input data will be provided within `<site_data>` tags.
+
       1. Calculate a composite risk score per site. Apply the Sponsor risk matrix (Critical = 5, Major = 3, Minor = 1) with these weights: Protocol Deviations 30 %, Query Aging 25 %, IP Accountability 20 %, Enrollment Lapse 15 %, Training Compliance 10 %.
       2. Rank sites from highest to lowest risk.
       3. For each high-risk site, list:
@@ -20,7 +26,9 @@ messages:
          **Reasoning**: Think step-by-step, but do **not** show your chain-of-thought. Ask follow-up questions if data is insufficient.
   - role: user
     content: |-
+      <site_data>
       {{input}}
+      </site_data>
 testData:
   - input: |-
       sites:
