Fix CI failure by installing dependencies from requirements.txt
Updated .github/workflows/yaml-validation.yml to use `pip install -r requirements.txt` instead of manually listing packages.
This ensures that `pydantic`, which is now required by `validate_prompt_schema.py`, is installed in the CI environment.
Verified that `requirements.txt` contains `pydantic`.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/yaml-validation.yml
+++ b/.github/workflows/yaml-validation.yml
@@ -28,6 +28,6 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install pyyaml yamllint
+        run: pip install -r requirements.txt
       - name: Run all validation checks
         run: python3 tools/scripts/test_all.py
