fix(ci): use requirements.txt in docs maintenance workflow
Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/docs-maintenance.yml
+++ b/.github/workflows/docs-maintenance.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install pyyaml yamllint
+        run: pip install -r requirements.txt
       - name: Fix markdown issues
         run: python3 tools/scripts/fix_markdown_issues.py
       - name: Generate overviews
