Fix Jekyll deployment and reorganize repository guidance.
- Fix `deploy-pages.yml` to install dependencies (pydantic) before validation.
- Update `tools/scripts/check_prompts.py` to recursively scan for prompt files, ensuring coverage of nested directories like `prompts/technical/software_engineering/lifecycle`.
- Update `AGENTS.md` to reflect the current directory structure (`prompts/technical`, `prompts/meta`, etc.) and remove outdated references to `agentic_coding` and `meta_prompts`.
- Update path references in `AGENTS.md` to point to `tools/prompt_tools` and `tools/scripts`.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -30,6 +30,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Validate prompts
         run: python3 tools/scripts/validate_prompt_schema.py
       - name: Build with Jekyll
